--- a/css/yahtzee.css
+++ b/css/yahtzee.css
@@ -1,3 +1,9 @@
+* {
+	font-family: helvetica, sans-serif;
+	font-weight: 300;
+	font-size: 12px;
+}
+
 .possibility {
 }
 
@@ -43,23 +49,111 @@
 
 .keep {
 	visibility: hidden;
+	color: black;
 }
 
 .trash {
 	visibility: hidden;
+	color: #ba2323;
 }
 
 .score {
 	font-family: "Zeyada", verdana, arial, helvetica, cursive;
-	color: blue;
+	color: black;
 	font-size: 2em;
 	font-weight: bold;
 	text-align: center;
 }
 .score.trashed {
-	color: red;
+	color: #ba2323;
 }
 
 .progress {
-	margin-bottom: 0;
+	height: 20px;
+	background-color: white;
+	
+}
+
+dt, th {
+	font-weight: bold;
+}
+
+#banner {
+	text-align: center;
+	width: 100%;
+	padding: 15px;
+	background-color: white;
+	margin-top: 0px;
+	margin-left: 0px;
+	margin-bottom: 15px;
+	box-shadow: 0px 0px 5px black;	
+}
+
+h1 {
+	color: black;
+	font-family: 'Fredericka the Great', helvetica, sans-serif;
+	font-size: 40px;	
+}
+
+td, th {
+	padding: 10px;
+	width: 20%;
+	height: auto;
+}
+
+dd {
+	margin-left: 0px;
+}
+
+#scorePanel {
+	border: 1px solid black;
+	padding: 10px; 
+}
+
+table {
+	border: 1px solid black;
+	table-layout: fixed;
+	width: 90%;
+	
+}
+
+#btn a{
+	height: 30px;
+	width: 60px;
+	background-color: #ba2323;
+	color: white;
+	font-weight: bold;
+	padding: 10px;
+	border-radius: 5px;	
+}
+
+#btn a:hover{
+	background-color: #fcb51b;
+	text-decoration: none;
+	color: black;
+}
+
+body {
+	background-color: #215fc4;
+}
+
+.container {
+	background-color: white;
+	padding: 40px;
+	box-shadow: 0px 0px 5px black;
+	margin-bottom: 20px;
+	min-width: 95%;
+	
+}
+
+th {
+	background-color: #fcb51b;
+}
+
+#upperScore, #lowerScore, #bonus, #totalScore {
+	font-family: "Zeyada", verdana, arial, helvetica, cursive;
+	color: black;
+	font-size: 2em;
+	font-weight: bold;
+	text-align: center;
 }
